--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Gov 50 Final Project"
-author: "Your Name Here"
+author: "Lenny Pische"
 description: "My final project"
 output:
   distill::distill_article:
@@ -11,4 +11,5 @@ output:
 
 ## Project thoughts
 
-I am interested in exploring data related to...
+My project idea is to explore data related to differences in the 2014 and 2019 EU parliament elections in Italy.
+Specifically, I will explore how one of the most prominent parties in 2014 dropped almost 20% in percentage points, and how different regions of Italy voted in both elections respectively. I will also analyze how education levels and age correlate to voting trends, and gather conclusions from the data.
