--- a/index.Rmd
+++ b/index.Rmd
@@ -7,6 +7,11 @@ output:
     self_contained: false
 ---
 
+```{r}
+library(tidyverse)
+library(broom)
+library(knitr)
+```
 
 ## Project thoughts
 
@@ -28,4 +33,20 @@ If I observe lower values of the left-right voting choice indicator in the datas
 If I observe higher "Voted" values (in the national election vote) for people that voted in the EU election, this will support my second hypothesis. Otherwise, this will not support my hypothesis.
 
 If I observe higher percentages for parties that politically align themselves  on the left for people that voted in the EU election, this will support my third hypothesis. Otherwise, it will not. 
+
+#implementation
+
+
+```{r}
+
+age_to_Left_right <- read.csv("index_files/age - LR index.csv")
+education_to_left_right
+
+EU_to_national_vote 
+EU_to_national_preference <- read.csv("index_files/eb_91.5_post-elect_volume C_IT copy.csv")
+
+
+
+
+```
 
