--- a/index.Rmd
+++ b/index.Rmd
@@ -40,13 +40,28 @@ If I observe higher percentages for parties that politically align themselves  o
 ```{r}
 
 age_to_Left_right <- read.csv("index_files/age - LR index.csv")
-education_to_left_right
+education_to_left_right <- read.csv("index_files/edu to LR.csv")
 
-EU_to_national_vote 
+EU_to_national_vote <- read.csv("index_files/EU to national elec.csv")
 EU_to_national_preference <- read.csv("index_files/eb_91.5_post-elect_volume C_IT copy.csv")
 
+summary_data <- EU_to_national_vote |>
+  group_by(EU) |>
+  summarize(Voted_in_National = sum(Voted.in.National.Election),
+            Did_not_vote_in_National = sum(Did.not.vote.in.National.Election))
 
+histogram <- summary_data |>
+  pivot_longer(cols = c(Voted_in_National, Did_not_vote_in_National)) %>%
+  ggplot(aes(x = EU, y = value, fill = name)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(
+    x = "EU Election Participation",
+    y = "National Election participation",
+    fill = "National Election Outcome"
+  ) +
+  scale_fill_manual(values = c("Voted_in_National" = "steelblue1", "Did_not_vote_in_National" = "indianred3"),
+                    labels = c(Voted_in_National = "Voted in National Election", Did_not_vote_in_National = "Did not vote in National Election"))
 
-
+histogram
 ```
 
